dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)
AC_CONFIG_AUX_DIR(../..)
AM_INIT_AUTOMAKE(sid,0.1)

dnl automake support
AM_MAINTAINER_MODE
AC_EXEEXT

AC_PROG_INSTALL
AC_SUBST(INSTALL)

dnl Perform --target/--enable-targets processing.
CY_SIDTARGET_CHECK

dnl Install without the --program-prefix
program_transform_name=s,x,x,

AC_OUTPUT_COMMANDS([chmod a+x configrun-sid pregen/pregen-configs])
AC_OUTPUT([Makefile pregen/Makefile configrun-sid pregen/pregen-configs])
